Added Line and Column number indicator

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h2>INPUT JSON : </h2>
-    <textarea id="input-text-area" cols="30" rows="10"></textarea>
+    <textarea id="input-text-area" cols="30" rows="10" autofocus></textarea>
     <br><br>
+    Ln : <span id="line-number-span"></span> |
+    Col : <span id="col-number-span"></span>
     <button id="convert-button">Parse JSON</button>
     <br><br>
     <h2>OUTPUT JSON : </h2>
